# finding_favorite_job

./: .gitignore  analytics.py  main.py  models.py  my_preferences.py  pyproject.toml  readme.md  receive_data.py  requests_to_external_services.py  settings_app.py  utils.py
nlp/: interface_client.py  nltk_logic.py  server.py
static/: find_out_the_statistics_of_frequent_skills.html  search_db_for_jobs_that_fit_my_resume.html
